added href link to email and changed sub paragraph color

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                                 <p>DoubleDateOC is free to its users, and makes money from its advertisers. We try to display advertisers that are based on your interests. We encourage the advertisers to make special deals available to the DoubleDateOC clientele, and we encourage you to patronize those businesses.</p>
                             </div>
                             <div class="question list-group-item" ng-click="faq.question15=!faq.question15">
-                                Why do I do if I'm having technical problems?
+                                What do I do if I'm having technical problems?
                             </div>
                             <div class="answer" ng-show="faq.question15">
-                                <p>Email us at doubledateoc.moderator@gmail.com.</p>
+                                <p>Email us at <a href="mailto:doubledateoc.moderator@gmail.com">doubledateoc.moderator@gmail.com</a></p>
                             </div>
 
 
