--- a/pages/signup_name.html
+++ b/pages/signup_name.html
@@ -1,10 +1,9 @@
 <div class="signup-name-page">
     <p>enter names below:</p>
-
     <input type="text" placeholder="i.e. 'Donnie and Marie'" class="input_text" ng-model="sunc.name" />
     <p class="alert alert-danger alert-dismissible fade in invalidEmail" ng-show="sunc.addResults">first names</p>
-    <button type="button" class="btn btn-default btn-block submitSignup" aria-label="Left Align"
+
+    <button type="button" class="btn btn-default btn-block submitSignup" aria-label="Submit"
             ng-click="sunc.nameButtonClicked();">submit
     </button>
-
 </div>
