--- a/pages/their_age_range.html
+++ b/pages/their_age_range.html
@@ -24,17 +24,16 @@
         </button>
     </div>
 
-
     <div class="previous-next pull-right">
         <a href="#/our_age_range">
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
+            <button type="button" class="btn btn-default chevronButton" aria-label="Previous">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             </button>
         </a>
-        <!-- <a href="#/interests_home"> -->
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click = 'tac.setTheirAge()' ng-disabled='!tac.theirAgeMin'>
+
+            <button type="button" class="btn btn-default chevronButton" aria-label="Next" ng-click = 'tac.setTheirAge()'
+                    ng-disabled='!tac.theirAgeMin'>
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             </button>
-        </a>
     </div>
 </div>
