--- a/pages/distance.html
+++ b/pages/distance.html
@@ -12,15 +12,16 @@
 
 <div class="previous-next pull-right">
     <a href="#/our_location">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Previous">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
     </a>
-    <!-- <a href="#/user_age_range"> -->
-    <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="dc.setDistance()" ng-disabled='!dc.userMaxDistance'>
+
+    <button type="button" class="btn btn-default chevronButton" aria-label="Next" ng-click="dc.setDistance()"
+            ng-disabled='!dc.userMaxDistance'>
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     </button>
-    </a>
+
 </div>
 
 </div>
