--- a/pages/signup_paragraph.html
+++ b/pages/signup_paragraph.html
@@ -1,14 +1,16 @@
 <div class="signup-paragraph-page">
     <p>enter a short paragraph about yourselves:</p>
     <p class="input-fyi"><strong>do</strong> mention key interests and other preferences like 'no smokers'<br><strong>don't</strong> give any identifying information like last names, e-mails, or telephone numbers</p>
+
     <!--<p class="input-fyi textbox-fyi"> (limit 200 characters) </p>-->
     <textarea rows="7" cols="30" maxlength="200" ng-model="spc.paragraph" name="paragraph" ng-disabled="spc.paragraph.length==230">
     </textarea>
     <p class="input-fyi textbox-fyi">characters left: {{spc.maxLength-spc.paragraph.length}}</p>
 
-    <button type="button" class="btn btn-default btn-block welcome_button" ng-click="spc.signUpParagraphButtonClick()">submit</button>
+    <button type="button" class="btn btn-default btn-block welcome_button"
+            ng-click="spc.signUpParagraphButtonClick()" aria-label="Submit">submit</button>
     <p class="alert alert-danger alert-dismissible fade in paragraph-minimum" ng-hide="spc.validationText">Please add a paragraph
         of at least 50 characters.
     </p>
 </div>
-</div>
+
