--- a/pages/signup_password.html
+++ b/pages/signup_password.html
@@ -2,7 +2,9 @@
     <!--enter password-->
     <input type="password" class="input_text" id="confirm" placeholder="password" ng-model="supc.ourPassword">
     <input type="password" class="input_text" placeholder="confirm password" ng-model = "supc.confirmPassword">
-    <button type="button" class="btn btn-default btn-block current-location" id="submit" ng-click="supc.validate_password()">submit</button>
+    <button type="button" class="btn btn-default btn-block current-location" id="submit"
+            ng-click="supc.validate_password()" aria-label="Submit">submit</button>
+
     <div class="alert alert-danger alert-dismissible fade in" ng-show="!supc.matchingPassword">password doesn't match </div>
     <div class="alert alert-danger alert-dismissible fade in" ng-show="!supc.validPassword">password must be 8 characters long and contain a number, uppercase letter and lower case letter
     </div>
