--- a/pages/terms.html
+++ b/pages/terms.html
@@ -50,10 +50,10 @@
         If you suspect  a security breach into your account, you must immediately contact DoubleDateOC of any unauthorized use of your account.
         </p>
     </div>
+
     <input type="checkbox" ng-click="tc.acceptedTerms=!tc.acceptedTerms">
     <span class="input-fyi"> I accept the terms and conditions</span>
 
     <button type="button" class="btn btn-default btn-block welcome_button initialSubmit" ng-disabled="!tc.acceptedTerms"
-            ng-click="tc.termsButtonClicked()">Join!</button>
-
+            ng-click="tc.termsButtonClicked()" aria-label="Join">Join!</button>
 </div>
