--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body class="welcome_body" ng-controller="routeController">
 
-<span data-toggle="modal" data-target=".faq-modal" class="glyphicon glyphicon-question-sign"></span>
+<span><a href="" data-toggle="modal" data-target=".faq-modal" class="glyphicon glyphicon-question-sign"></a></span>
 
 <div class="container">
 
@@ -147,15 +147,6 @@
                             <div class="answer" ng-show="faq.question15">
                                 <p>Email us at <a href="mailto:doubledateoc.moderator@gmail.com">doubledateoc.moderator@gmail.com</a></p>
                             </div>
-
-
-                            <!--
-                            <div class="question list-group-item">
-                            </div>
-                            <div class="answer">
-                            </div>
-                            -->
-
                         </div>
                     </div>
 
