took off the requirement for the travel interests

--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -29,8 +29,7 @@
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             </button>
         </a>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align"
-                ng-disabled="itc.travelInterestCount()==0;" ng-click="itc.setUrl()">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="itc.setUrl()">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
 
