Fixed the aria label, removed the text asking for at least one pick

--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -1,6 +1,6 @@
 
 <div>
-    <h1>when traveling we like</h1><p class="input-fyi">(select at least one interest)</p>
+    <h1>when traveling we like</h1>
     <div class="interest-buttons">
         <div class="at-home groupings">
             <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align"
@@ -25,11 +25,12 @@
 
     <div class="previous-next pull-right">
         <a href="#/interests_outdoors">
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="itc.setTravelInterests()">
+            <button type="button" class="btn btn-default chevronButton" aria-label="Previous"
+                    ng-click="itc.setTravelInterests()">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             </button>
         </a>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="itc.setUrl()">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Next" ng-click="itc.setUrl()">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
 
