cleaned up faq and terms pages

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                     <li>Age: each couple puts in their age range, and the age range they are looking for, and these are matched you-to-them and them-to-you.</li>
                                     <li>Location: each couple puts in their zip code, and the distance range they are willing to go, and these are matched you-to-them and them-to-you.</li>
                                     <li>Interests: each couple marks the interests that they want to share with other couples. The more common interests you have with another couple, the higher the rating you have as a match.</li>
-                                    <li>Personal selection: Based on the three criteria above, you will be shown potential matches where meet the age and location requirements, and where you have the most shared interests. At that point, you will be shown the first names, profile picture, and profile paragraph of the other couple, along with the common interests. You will be allowed to give a “thumbs up” or “thumbs down”. It is only when two couples give the “thumbs up” to each other that the e-mails are sent out.</li>
+                                    <li>Personal selection: Based on the three criteria above, you will be shown potential matches where you meet the age and location requirements, and where you have the most shared interests. At that point, you will be shown the first names, profile picture, and profile paragraph of the other couple, along with the common interests. You will be allowed to give a “thumbs up” or “thumbs down”. It is only when two couples give the “thumbs up” to each other that the e-mails are sent out.</li>
                                 </ul>
                             </div>
                             <div class="question list-group-item" ng-click="faq.question7=!faq.question7">
@@ -103,7 +103,7 @@
                                 What if DoubleDateOC didn’t find me any matches?
                             </div>
                             <div class="answer" ng-show="faq.question8">
-                                <p>The DoubleDateOC match finder runs in the background, and you should expect to see your first potential matches show up within one hour; check back after one hour to see your first potential matches. Bear in mind that DoubleDateOC is a new service that is currently ramping up. You should expect to see more matches in the near future. Check back in a few days and see what new potential matches we have identified. Also, you might expand your age range(s) and the number of interests you have selected.</p>
+                                <p>Bear in mind that DoubleDateOC is a new service that is currently ramping up. You should expect to see more matches in the near future. Check back in a few days and see what new potential matches we have identified. Also, you might expand your age range(s) and the number of interests you have selected.</p>
                             </div>
                             <div class="question list-group-item" ng-click="faq.question9=!faq.question9">
                                 How many interests should I list?
@@ -135,12 +135,12 @@
                             <div class="answer" ng-show="faq.question13">
                                 <p>The Internet is a big place, and DoubleDateOC cannot be responsible for trying to vet or screen your potential matches beyond the data we are given. You should exercise normal caution in setting up a first meeting, such as arranging it in a restaurant or other public place.</p>
                             </div>
-                            <div class="question list-group-item" ng-click="faq.question14=!faq.question14">
-                                Why do you have all this advertising?
-                            </div>
-                            <div class="answer" ng-show="faq.question14">
-                                <p>DoubleDateOC is free to its users, and makes money from its advertisers. We try to display advertisers that are based on your interests. We encourage the advertisers to make special deals available to the DoubleDateOC clientele, and we encourage you to patronize those businesses.</p>
-                            </div>
+                            <!--<div class="question list-group-item" ng-click="faq.question14=!faq.question14">-->
+                                <!--Why do you have all this advertising?-->
+                            <!--</div>-->
+                            <!--<div class="answer" ng-show="faq.question14">-->
+                                <!--<p>DoubleDateOC is free to its users, and makes money from its advertisers. We try to display advertisers that are based on your interests. We encourage the advertisers to make special deals available to the DoubleDateOC clientele, and we encourage you to patronize those businesses.</p>-->
+                            <!--</div>-->
                             <div class="question list-group-item" ng-click="faq.question15=!faq.question15">
                                 What do I do if I'm having technical problems?
                             </div>
