terms and conditions run on sentence fixed

--- a/pages/terms.html
+++ b/pages/terms.html
@@ -24,12 +24,15 @@
         <p>
         You agree to not harass, stalk, embarrass, or solicit business from other DoubleDateOC members.
         You agree to notify DoubleDateOC of any other member that you believe is in violation of these rules (<a href="mailto:doubledateoc.moderator@gmail.com">doubledateoc.moderator@gmail.com</a>).
-        DoubleDateOC will check your photo and paragraph for any unsuitable content.  If there is any unsuitable content, DoubleDateOC will notify you that a different photo will need to be used and/or paragraph will need to be edited that does not contain unsuitable content.
-        Unsuitable content is defined:
-        as any content that can reasonably be construed as offensive to the public in general.
-        any content advocating political agendas.
-        any illegal activity.
-        any content that does not support the purpose of DoubleDateOC.
+        DoubleDateOC will check your photo and paragraph for any unsuitable content.  If there is any unsuitable
+            content, DoubleDateOC will remove it.
+        Unsuitable content is defined as:
+            <ul>
+              <li>any content that can reasonably be construed as offensive to the public in general</li>
+              <li>any content advocating political agendas</li>
+              <li>any illegal activity</li>
+              <li>any content that does not support the purpose of DoubleDateOC</li>
+            </ul>
         </p>
 
         <h3><strong>Liability</strong></h3>
