--- a/pages/signup_email.html
+++ b/pages/signup_email.html
@@ -1,7 +1,7 @@
 <!--include a load animation-->
 <!--enter email for us to contact you as a couple-->
 <div class="signup">
-      <input type="text" placeholder="e-mail address" class="input_text" ng-model = 'suec.emailAddress'>
+      <input type="email" placeholder="e-mail address" class="input_text" ng-model = 'suec.emailAddress'>
 
       <button type="button" class="btn btn-default btn-block submitSignup" aria-label="Submit"
               ng-click="suec.validate_email()">submit</button>
