--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -1,7 +1,7 @@
 <div class="col-xs-11.5 col-xs-offset-0.5">
     as a couple you're looking to expand your circle of friends.<br>so are the other people here.<br>
     <div class="text-center button-spacing">
-        <a href="#/our_location" class="center-block  btn-toolbar"><button type="button" class="btn btn-default btn-block welcome_button">We're new</button></a>
-        <a href="#/login" class="center-block  btn-toolbar"><button type="button" class="btn btn-default btn-block welcome_button">We've been here before</button></a>
+        <a href="#/our_location" class="center-block  btn-toolbar"><button type="button" class="btn btn-default btn-block welcome_button">we're new</button></a>
+        <a href="#/login" class="center-block  btn-toolbar"><button type="button" class="btn btn-default btn-block welcome_button">we've been here before</button></a>
     </div>
 </div>
