--- a/pages/their_age_range.html
+++ b/pages/their_age_range.html
@@ -1,5 +1,5 @@
 <div class="age_range">
-    we want to meet other couples who are <span class="age">{{tac.theirAgeRange()}}</span> years old. <span class="input-fyi">(select one or more)</span>
+    we want to meet other couples who are <span class="age">{{tac.theirAgeRange()}}</span> years old. <p class="input-fyi">(select one or more)</p>
 
     <div class="age-range-buttons">
         <button type="button" class="btn btn-default age-btn" aria-label="18-25"
