added button to picture page, added overflow property to match card, added max-height and max width to theh thumb images

--- a/pages/match.html
+++ b/pages/match.html
@@ -9,10 +9,10 @@
             <p>Common interests: {{match.commonInterestString}}</p>
         </div>
         <div class="match_buttons">
-            <button type="button" class="btn btn_match" ng-click="mc.approveOrReject($index, false)">
+            <button type="button" class="btn btn_match thumbs" ng-click="mc.approveOrReject($index, false)">
                 <span class="glyphicon glyphicon-thumbs-down"></span>
             </button>
-            <button type="button" class="btn btn_match" ng-click="mc.approveOrReject($index, true)">
+            <button type="button" class="btn btn_match thumbs" ng-click="mc.approveOrReject($index, true)">
                 <span class="glyphicon glyphicon-thumbs-up"></span>
             </button>
         </div>
