--- a/pages/signup_picture.html
+++ b/pages/signup_picture.html
@@ -1,7 +1,7 @@
 <div class="signup-photo-page">
     <div>
         <p>upload a photo</p>
-        <div id="picture-dropzone-div" class="dropzone">
+        <div id="picture-dropzone-div" class="dropzone btn">
         </div>
         <br>
         <div>
