--- a/pages/match.html
+++ b/pages/match.html
@@ -10,10 +10,10 @@
         </div>
         <div class="match_buttons">
             <button type="button" class="btn btn_match thumbs" ng-click="mc.approveOrReject($index, false)">
-                <span class="glyphicon glyphicon-thumbs-down"></span>
+                <span class="glyphicon glyphicon-thumbs-down thmbdown"></span>
             </button>
             <button type="button" class="btn btn_match thumbs" ng-click="mc.approveOrReject($index, true)">
-                <span class="glyphicon glyphicon-thumbs-up"></span>
+                <span class="glyphicon glyphicon-thumbs-up thmbup"></span>
             </button>
         </div>
         <p>{{match.approveOrRejectResults}}</p>
