--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Double Date OC</title>
-    <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed|Francois+One|News+Cycle|Open+Sans+Condensed:300|PT+Sans+Narrow|Dosis|NTR|Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed|Francois+One|News+Cycle|Open+Sans+Condensed:300|PT+Sans+Narrow|Dosis|NTR|Quicksand|Fira+Sans:700|Poppins:700|Work+Sans" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -28,9 +28,7 @@
 <span><a href="" data-toggle="modal" data-target=".faq-modal" class="glyphicon glyphicon-question-sign"></a></span>
 
 <div class="container">
-
-    <header>double date oc</header>
-
+    <header><span class="title"><span class="header-double">DOUBLEDATE</span><span class="header-oc">OC</span></span></header>
     <div class="view-container">
         <div ng-view></div>
     </div>
@@ -44,12 +42,12 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Modal Header</h4>
+                    <h1 class="modal-title">FAQ</h1>
                 </div>
                 <div class="modal-body">
                     <!--<p>Some text in the modal.</p>-->
                     <div class="faq_body">
-                        <h1>FAQ</h1>
+                        <!--<h1>FAQ</h1>-->
                         <div class="profile-edit list-group">
                             <div class="question list-group-item" ng-click="faq.question1=!faq.question1" >
                                 What is this site?
