--- a/pages/signup_password.html
+++ b/pages/signup_password.html
@@ -1,7 +1,7 @@
 <div>
     <!--enter password-->
     <input type="password" class="input_text" id="confirm" placeholder="password" ng-model="supc.ourPassword">
-    <input type="password" class="input_text" placeholder="confirm password" ng-model = "supc.confirmPassword">
+    <input type="password" class="input_text password-confirm" placeholder="confirm password" ng-model = "supc.confirmPassword">
     <button type="button" class="btn btn-default btn-block current-location" id="submit"
             ng-click="supc.validate_password()" aria-label="Submit">submit</button>
 
@@ -9,3 +9,5 @@
     <div class="alert alert-danger alert-dismissible fade in" ng-show="!supc.validPassword">password must be 8 characters long and contain a number, uppercase letter and lower case letter
     </div>
 </div>
+
+
