--- a/pages/interests_out.html
+++ b/pages/interests_out.html
@@ -51,7 +51,8 @@
         </div>
     </div>
 
-    <div class="previous-next pull-right">
+    <!-----------Previous and Next buttons-------------->
+    <div class="previous-next pull-right" ng-hide="ioc.loggedIn">
         <a href="#/interests_home">
             <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="ioc.setNightOutInterests()">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -62,7 +63,19 @@
                     ng-disabled="ioc.aNightOutInterestCount()==0;" ng-click="ioc.setUrl()">
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             </button>
-
     </div>
 
+    <!-----------Save and Cancel buttons-------------->
+    <div class="edit-profile-buttons" ng-show="ioc.loggedIn">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Previous"
+                ng-click="ioc.clickSaveButton();">
+            Save
+        </button>
+
+        <a href="#/edit_profile">
+            <button type="button" class="btn btn-default chevronButton" aria-label="Next">
+                Cancel
+            </button>
+        </a>
+    </div>
 </div>
