--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -23,7 +23,8 @@
         </div>
     </div>
 
-    <div class="previous-next pull-right">
+    <!-----------Previous and Next buttons-------------->
+    <div class="previous-next pull-right" ng-hide="itc.loggedIn">
         <a href="#/interests_outdoors">
             <button type="button" class="btn btn-default chevronButton" aria-label="Previous"
                     ng-click="itc.setTravelInterests()">
@@ -33,7 +34,20 @@
         <button type="button" class="btn btn-default chevronButton" aria-label="Next" ng-click="itc.setUrl()">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
+    </div>
 
+    <!-----------Save and Cancel buttons-------------->
+    <div class="edit-profile-buttons" ng-show="itc.loggedIn">
+            <button type="button" class="btn btn-default chevronButton" aria-label="Previous"
+                    ng-click="itc.clickSaveButton();">
+                Save
+            </button>
+
+        <a href="#/edit_profile">
+            <button type="button" class="btn btn-default chevronButton" aria-label="Next">
+                Cancel
+            </button>
+        </a>
     </div>
 
 </div>
