--- a/pages/edit_profile.html
+++ b/pages/edit_profile.html
@@ -37,6 +37,8 @@
         </div>
         <div class="profile-list list-group-item" ng-click="epc.interests=!epc.interests">Interests</div>
         <div class="profile-option" ng-show="epc.interests">
+            <a href="#/interests_home"><button type="button">Interests at Home</button></a>
+            <a href="#/interests_out"><button type="button">Interests Out</button></a>
             <a href="#/interests_outdoors"><button type="button">Interests Outdoors</button></a>
             <a href="#/interests_travel"><button type="button">Interests Travel</button></a>
             <input type="checkbox" id="cbox2" value="second_checkbox"><label for="cbox2">Interest 2</label>
