--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 <body class="welcome_body" ng-controller="routeController">
 
+
 <span><a href="" data-toggle="modal" data-target=".faq-modal" class="glyphicon glyphicon-question-sign"></a></span>
 
 <div class="container">
@@ -155,6 +156,23 @@
             </div>
         </div>
     </div>
+
+<div class="body-wineglass">
+    <p>loading</p>
+    <div class="loader-wineglass">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <div class="wineglass left">
+            <div class="top"></div>
+        </div>
+        <div class="wineglass right">
+            <div class="top"></div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
