--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -2,7 +2,7 @@
 <div>
     <h1>when traveling we like</h1>
     <div class="interest-buttons">
-        <div class="at-home groupings">
+        <div class="travel groupings">
             <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align"
                     ng-click="itc.camping=!itc.camping; itc.travelInterestButtonClicked();"
                     ng-class="{buttonHighlighted:itc.camping}">camping
