--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Double Date OC</title>
-    <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed|Francois+One|News+Cycle|Open+Sans+Condensed:300|PT+Sans+Narrow|Dosis|NTR|Quicksand|Fira+Sans:700|Poppins:700|Work+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed|Francois+One|News+Cycle|Open+Sans+Condensed:300|PT+Sans+Narrow|Dosis|NTR|Quicksand|Fira+Sans:700|Poppins:700|Work+Sans|Mandali|News+Cycle;
+" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -158,7 +159,7 @@
     </div>
 
 <div class="body-wineglass">
-    <p>loading</p>
+    <span class="loading-wineglass">LOADING</span>
     <div class="loader-wineglass">
         <ul>
             <li></li>
